--- a/movie-review-frontend/src/app/component/moviedetails/moviedetails.component.scss
+++ b/movie-review-frontend/src/app/component/moviedetails/moviedetails.component.scss
@@ -8,12 +8,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 40%;
 }
 
 .review-section{
     display: flex;
     flex-direction: column;
+    width: 40%;
+    align-items: center;
+
+    
+    
+}
+
+.review-heading{
+    font-family: "Lora" , serif;
+    font-size: 2rem;
+    font-weight: 800;
+    width : 100%;
+    background: khaki;
+    margin-top : 2rem;
+
+
     
 }
 
@@ -35,6 +51,10 @@ h1{
     font-family: "Lora" , serif;
     font-size: 2rem;
     font-weight: 800;
+    width : 100%;
+    background: khaki;
+
+    
 
 }
 p{
@@ -43,4 +63,7 @@ p{
 
 img{
     width : 25%
+}
+.like{
+    color: blue;
 }
