--- a/movie-review-frontend/src/app/component/header/header.component.html
+++ b/movie-review-frontend/src/app/component/header/header.component.html
@@ -4,6 +4,7 @@
       <li class = "nav-bar-link"><a [routerLink] = "['/home']">HOME</a></li>
       <li class = "nav-bar-link"><a href = "">FAVOURITE</a></li>
       <li class = "nav-bar-link"><a>REVIEWED</a></li>
-      <li class = "nav-bar-link"><a (click) = "onloginclick()">LOGIN</a></li>
+      <li class = "nav-bar-link"><a (click) = "onloginclick()" *ngIf = "loginflag == false">LOGIN</a></li>
+      <li class="nav-bar-link"><a (click) = "onlogoutclick()" *ngIf = "loginflag == true">LOGOUT</a></li>
     </ul>
   </nav>
