--- a/movie-review-frontend/src/app/component/header/header.component.scss
+++ b/movie-review-frontend/src/app/component/header/header.component.scss
@@ -42,10 +42,12 @@
     padding: 0.5rem;
     margin : 0 1rem;
     font-weight: 900;
+
 }
 
 nav a:hover{
     border-bottom : 1px solid#EE4C7C ;
+    cursor: pointer;
 }
 
 
