--- a/movie-review-frontend/src/app/component/login/login.component.html
+++ b/movie-review-frontend/src/app/component/login/login.component.html
@@ -1,6 +1,6 @@
-<h1>Login</h1>
+<h1 >Login</h1>
 <mat-dialog-content>
-    <form [formGroup] = "loginForm">
+    <form [formGroup] = "loginForm" class = "login-container">
         <mat-form-field appearance = "outline" >
             <mat-label>email</mat-label>
             <input matInput formControlName = "email"> 
@@ -15,10 +15,11 @@
             <mat-error *ngIf = "formerrors.password">{{formerrors.password}}</mat-error>
         </mat-form-field>
 
-        <mat-dialog-actions>
-            <button [disabled] = "!loginForm.valid" (click) = "onlogin()">Login</button>
-            <button [disabled] = "!loginForm.valid" (click) = "onsignup ()">Signup</button>
-        </mat-dialog-actions>
+        
 
     </form>
 </mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-raised-button [disabled] = "!loginForm.valid" (click) = "onlogin()">Login</button>
+    <button mat-raised-button [disabled] = "!loginForm.valid" (click) = "onsignup ()">Signup</button>
+</mat-dialog-actions>
