--- a/movie-review-frontend/src/app/component/moviedetails/moviedetails.component.scss
+++ b/movie-review-frontend/src/app/component/moviedetails/moviedetails.component.scss
@@ -1,69 +1,123 @@
 .container{
     display: flex;
     flex-direction: row;
+    width: 100%;
+}
+
+.title{
+    font-family: "Lora" , serif;
+    font-size: 3rem;
+    font-weight: 900;
+    margin-bottom: 1rem;
+
+}
+.subtitle{
     font-family: 'Roboto Condensed', sans-serif;
-    
-}
-.mat-card-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 40%;
-}
-
-.review-section{
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    align-items: center;
-
+    font-weight: 50;
+    color: grey;
+    font-size: 1rem;
+    margin-top: 0.5px;
     
     
 }
 
-.review-heading{
-    font-family: "Lora" , serif;
-    font-size: 2rem;
-    font-weight: 800;
-    width : 100%;
-    background: khaki;
-    margin-top : 2rem;
 
-
-    
-}
-
-.genre{
-    display: flex;
-    flex-direction: row;
-}
-
-h3{
-
-    font-family: 'Lora', serif;
-    font-size: 1.5rem;
-
-}
-h2{
-    font-family: "Lora" , serif;
-}
-h1{
-    font-family: "Lora" , serif;
-    font-size: 2rem;
-    font-weight: 800;
-    width : 100%;
-    background: khaki;
-
-    
-
-}
-p{
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-img{
-    width : 25%
-}
-.like{
+.icon{
     color: blue;
 }
+
+.image{
+    width: 30%;
+    height: auto;
+    
+}
+.details{
+    display: flex;
+    flex-direction: column;
+    width : 50%;
+    border: 1px solid lightblue;
+    border-radius: 2rem;
+    margin : 2rem;
+    padding: 1rem;
+    align-items: center;
+}
+
+.tempcontainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+    
+    
+}
+
+.rating{
+    display: flex;
+    font-size: 2rem;
+    justify-content: center;
+    
+}
+
+.release-date{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 100;
+    border: 1px solid lightblue;
+    border-radius: 1rem;
+    float: right;
+    padding: 0.5rem;
+    margin-top: 0rem;
+    margin-bottom: 2rem;
+    
+}
+
+.info{
+
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.info-head{
+    border: 1px solid lightblue;
+    border-radius: 1rem;
+    
+    padding: 0.5rem;
+    text-align: center;
+
+}
+
+.info-foot{
+    
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 100;
+    padding: 0.5rem;
+        
+}
+a:link{
+    text-decoration: none;
+    color: black;
+}
+
+a:hover{
+    color: blue;
+}
+
+.card-container{
+    display: flex;
+    flex-direction: column;
+    margin : 5rem;
+    width: 100%;
+    justify-content:space-evenly;
+    
+
+
+}
+.card{
+    margin:2rem
+}
+
+.card-header{
+    display: flex;
+    justify-content: flex-end;
+}
+
