--- a/movie-review-frontend/src/app/component/home/home.component.scss
+++ b/movie-review-frontend/src/app/component/home/home.component.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 50vh;
+    justify-content: center;
     
 
 
