--- a/movie-review-frontend/src/app/component/searchresult/searchresult.component.html
+++ b/movie-review-frontend/src/app/component/searchresult/searchresult.component.html
@@ -1,8 +1,12 @@
 <div>
-    <mat-grid-list cols = "4" >
+    <mat-grid-list cols = "4" *ngIf = "result">
         <mat-grid-tile *ngFor = "let movie of result" class = "gridtile"  [routerLink] = "['/moviedetails' , movie.title , movie.image]">
+            
             <img src = "{{movie.image}}" class = "gridimage">
             <mat-grid-tile-footer class = "gridlistfooter">{{movie.title}}</mat-grid-tile-footer>
         </mat-grid-tile>
     </mat-grid-list>
+    <div [hidden] = "result" class = "spinner">
+        <mat-spinner></mat-spinner>
+    </div>
 </div>
