--- a/movie-review-frontend/src/app/component/login/login.component.html
+++ b/movie-review-frontend/src/app/component/login/login.component.html
@@ -10,7 +10,7 @@
 
         <mat-form-field appearance = "outline" >
             <mat-label>password</mat-label>
-            <input matInput formControlName = "password"> 
+            <input type="password" matInput formControlName = "password"> 
             <mat-hint>enter your password</mat-hint>
             <mat-error *ngIf = "formerrors.password">{{formerrors.password}}</mat-error>
         </mat-form-field>
