--- a/movie-review-frontend/src/app/component/searchresult/searchresult.component.scss
+++ b/movie-review-frontend/src/app/component/searchresult/searchresult.component.scss
@@ -17,4 +17,13 @@
 
 .gridtile{
     cursor: pointer;
+    margin: 2rem;
+}
+
+.spinner{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 50vh;
 }
